--- a/src/style/scss/_moudle.scss
+++ b/src/style/scss/_moudle.scss
@@ -13,8 +13,9 @@ body {
     -khtml-user-select: none;
     user-select: none;
     height: 100%;
-    max-width: 750px;
-    min-width: 375px;
+    // max-width: 750px;
+    min-width: 320px;
+    
     overflow-x: hidden;
 }
 
