--- a/src/style/css/common.css
+++ b/src/style/css/common.css
@@ -13,8 +13,8 @@ body {
     -khtml-user-select: none;
     user-select: none;
     height: 100%;
-    max-width: 750px;
-    min-width: 375px;
+    /* max-width: 750px; */
+    min-width: 320px;
     margin:0 auto;
     overflow-x: hidden;
 }
